--- a/alertmanager/alert.tmpl
+++ b/alertmanager/alert.tmpl
@@ -25,7 +25,7 @@
 {{- if eq $index 0 -}}
 告警类型: {{ $alert.Labels.alertname }}
 告警级别: {{ $alert.Labels.severity }}
-
+告警环境:
 =====================
 {{- end }}
 ===告警详情===
