--- a/alertmanager/alert.tmpl
+++ b/alertmanager/alert.tmpl
@@ -7,7 +7,7 @@
 =====================
 {{- end }}
 ===告警详情===
-告警详情: {{ $alert.Annotations.message }}
+告警详情: {{ $alert.Annotations.description }}
 故障时间: {{ $alert.StartsAt.Format "2006-01-02 15:04:05" }}
 ===参考信息===
 {{ if gt (len $alert.Labels.instance) 0 -}}故障实例ip: {{ $alert.Labels.instance }};{{- end -}}
@@ -26,7 +26,7 @@
 =====================
 {{- end }}
 ===告警详情===
-告警详情: {{ $alert.Annotations.message }}
+告警详情: {{ $alert.Annotations.description }}
 故障时间: {{ $alert.StartsAt.Format "2006-01-02 15:04:05" }}
 恢复时间: {{ $alert.EndsAt.Format "2006-01-02 15:04:05" }}
 ===参考信息===
